examples/test/testpolicy17704.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17704
  namespace: namespace360
spec:
  podSelector:
    matchLabels:
      key28: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value24
          key46: value12
      podSelector:
        matchLabels:
          key25: value30
          key13: value16
